--- a/internal/stylelint-config/package.json
+++ b/internal/stylelint-config/package.json
@@ -14,6 +14,9 @@
     "prettier": "^3.0.3",
     "stylelint": "^16.3.1",
     "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
     "stylelint-prettier": "^5.0.0"
   }
 }
