--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "commit": "npx git-cz",
     "prepare": "husky",
     "build": "pnpm run -C internal/build build",
-    "dev": "pnpm run -C play dev"
+    "dev": "pnpm run -C play dev",
+    "gen": "tsx scripts/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,15 +23,21 @@
     "@mingcomity-design/eslint-config": "workspace:^",
     "@mingcomity-design/stylelint-config": "workspace:^",
     "@mingcomity-design/utils": "workspace:^",
+    "@types/fs-extra": "^11.0.4",
+    "@types/prompts": "^2.4.9",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.49.0",
+    "fs-extra": "^11.2.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "lodash-es": "^4.17.21",
     "mingcomity-design": "workspace:^",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
+    "prompts": "^2.4.2",
     "stylelint": "^16.3.1",
+    "tsx": "^4.7.2",
     "typescript": "~5.4.0"
   }
 }
