--- a/packages/mingcomity-design/package.json
+++ b/packages/mingcomity-design/package.json
@@ -76,6 +76,13 @@
   "peerDependencies": {
     "vue": "^3.4.21"
   },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@types/lodash-es": "^4.17.12",
+    "lodash-es": "^4.17.21"
+  },
   "devDependencies": {
     "vue": "^3.4.21",
     "vue-tsc": "^2.0.6"
