--- a/package.json
+++ b/package.json
@@ -30,11 +30,16 @@
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/prompts": "^2.4.9",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/test-utils": "^2.4.5",
+    "axios": "^1.6.8",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.49.0",
     "fs-extra": "^11.2.0",
     "husky": "^9.0.11",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "mingcomity-design": "workspace:^",
     "postcss": "^8.4.38",
@@ -42,6 +47,7 @@
     "prompts": "^2.4.2",
     "stylelint": "^16.3.1",
     "tsx": "^4.7.2",
-    "typescript": "~5.4.0"
+    "typescript": "~5.4.0",
+    "vitest": "^1.5.0"
   }
 }
