feat(component、theme-chalk): 新增tooltip组件
新增tooltip组件，完成对该组件的测试，对eslint配置修改

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,19 +1,9 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "../../dist/es/components",
-    "baseUrl": "./",
-    "rootDir": "./",
     "jsx": "preserve",
-    "jsxImportSource": "vue",
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "composite": true,
-    "paths": {
-      "@mingcomity-design/theme-chalk": ["../theme-chalk"]
-    }
+    "jsxImportSource": "vue"
   },
   "include": ["./"],
-  "exclude": ["**/__tests__/**", "**/__demos__/**", "**/*.md", "./build/**", "**/style/index.ts"],
-  "references": [{ "path": "../utils/tsconfig.json" }]
+  "exclude": ["**/__demos__/**", "**/*.md", "./build/**"]
 }
