--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@popperjs/core": "^2.11.6",
     "lodash-es": "^4.17.21",
     "vue": "^3.4.21"
   },
@@ -25,6 +26,7 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@mingcomity-design/components": "workspace:^",
     "@mingcomity-design/eslint-config": "workspace:^",
+    "@mingcomity-design/hooks": "workspace:^",
     "@mingcomity-design/stylelint-config": "workspace:^",
     "@mingcomity-design/utils": "workspace:^",
     "@types/fs-extra": "^11.0.4",
