--- a/packages/mingcomity-design/package.json
+++ b/packages/mingcomity-design/package.json
@@ -81,6 +81,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@types/lodash-es": "^4.17.12",
+    "@popperjs/core": "^2.11.8",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
