build(build): 修复打包类型的错误
修复了ts类型在打包中的错误

--- a/packages/mingcomity-design/package.json
+++ b/packages/mingcomity-design/package.json
@@ -10,7 +10,7 @@
     "ui",
     "vue"
   ],
-  "homepage": "https://mingcomity.cn/",
+  "homepage": "https://github.com/mingcomity/mingcomity-design",
   "bugs": {
     "url": "https://github.com/mingcomity/mingcomity-design/issues"
   },
