docs(docs、theme-chalk、component): 新增message的文档
新增message文档，处理部分命名错误问题

--- a/packages/mingcomity-design/package.json
+++ b/packages/mingcomity-design/package.json
@@ -24,7 +24,7 @@
   "exports": {
     ".": {
       "types": "./es/index.d.ts",
-      "import": "./es/index.mjs",
+      "import": "./index",
       "require": "./lib/index.js"
     },
     "./global": {
